# behqtcsdl

./: .env.txt  .flake8  .gitignore  .pre-commit-config.yaml  README.md  base.py
.circleci/: config.yml
services/src/: .pyproject.toml.swp  pyproject.toml
services/src/app/: main.py
services/src/app/api/: deps.py
services/src/app/api/api_v1/: api.py
services/src/app/api/api_v1/endpoints/: orders.py  users.py
services/src/app/core/: .__init__.py.swp  .config.py.swp  .logging.py.swp  .validators.py.swp  config.py  logging.py  utils.py  validators.py
services/src/app/crud/: .__init__.py.swp  crud_user.py
services/src/app/db/: base.py  base_class.py  session.py
services/src/app/error/: base_exception.py  error_handlers.py
services/src/app/models/: __init__.py  bank_account.py  branch.py  branch_address.py  category.py  contract.py  delivery_address.py  driver.py  employee.py  group.py  home_address.py  order.py  order_detail.py  partner.py  pay.py  product.py  role.py  user.py
services/src/app/schemas/: user.py
services/src/app/script/mssql/: bhol.sql  generate_user_bhol.sql
services/src/app/tests/integration/test_app/: test_main.py
